# lab-02-cache

./: .travis.yml  CMakeLists.txt  README.md
include/: cache_benchmark_alloc.hpp  cache_benchmark_base.hpp  cache_benchmark_chained_array.hpp  direction.hpp  functions.h
report/: README.md  report.yml
scripts/: checks.sh
sources/: cache_benchmark_base.cpp  direct.cpp  experiment.cpp  main.cpp  printer.cpp  random.cpp  rdirect.cpp  report.cpp
tests/: cached_benchmark_chained_array_test.cpp  test.cpp
